<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="195dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/nomor_antrian_anda_adalah"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nomorAntrian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/_000"
        android:textColor="#000"
        android:textSize="96sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat"
        android:text="@string/nomor_antrian_saat_ini_adalah"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/antrian_sebelum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat"
        android:text="@string/_000"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat"
        android:text="@string/silahkan_ambil_tiket_di_loket"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_rounded_selesai"
        android:padding="10dp"
        android:text="@string/selesai" />

</LinearLayout>